--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,13 +4,12 @@ spring_dependency_version = "1.1.7"
 mockk_version = "1.13.16"
 spring_mockk_version = "4.0.2"
 spring_graphql_test_version = "1.3.3"
-kotlin_version = "2.1.0"
-micrometer_version = "1.14.3"
+kotlin_version = "2.0.0"
 kotlin_logging_version = "3.0.5"
-kotlin_serialization_version = "1.8.0"
 mockito_version = "5.2.0"
 archunit_version = "1.3.0"
 kotlin_mockito_version = "5.4.0"
+ktlint_gradle_version = "12.1.1"
 
 [libraries]
 web = { module = "org.springframework.boot:spring-boot-starter-web", version.ref = "spring_version" }
@@ -18,12 +17,7 @@ graphql = { module = "org.springframework.boot:spring-boot-starter-graphql", ver
 webflux = { module = "org.springframework.boot:spring-boot-starter-webflux", version.ref = "spring_version" }
 aop = { module = "org.springframework.boot:spring-boot-starter-aop", version.ref = "spring_version" }
 actuator = { module = "org.springframework.boot:spring-boot-starter-actuator", version.ref = "spring_version" }
-validation = { module = "org.springframework.boot:spring-boot-starter-validation", version.ref = "spring_version" }
 devtools = { module = "org.springframework.boot:spring-boot-devtools", version.ref = "spring_version" }
-
-# Logging
-micrometer = { module = "io.micrometer:micrometer-core", version.ref = "micrometer_version" }
-prometheus = { module = "io.micrometer:micrometer-registry-prometheus", version.ref = "micrometer_version" }
 
 # Tests
 spring_test = { module = "org.springframework.boot:spring-boot-starter-test", version.ref = "spring_version" }
@@ -36,7 +30,6 @@ spring_mockk = { module = "com.ninja-squad:springmockk", version.ref = "spring_m
 
 # Kotlin
 kotlin_logging = { module = "io.github.microutils:kotlin-logging", version.ref = "kotlin_logging_version" }
-kotlin_serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin_serialization_version" }
 
 [bundles]
 defaultService = ["kotlin_logging", "aop", "devtools", "actuator", "web"]
@@ -50,3 +43,4 @@ kotlin-spring = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotl
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin_version" }
 springframework = { id = "org.springframework.boot", version.ref = "spring_version" }
 spring-dependency = { id = "io.spring.dependency-management", version.ref = "spring_dependency_version" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint_gradle_version" }
