build(deps): change interval of dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,29 +1,15 @@
 version: 2
 updates:
 
-  # Config for backend-dependencies
-  - package-ecosystem: "gradle"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    groups:
-      backend-dependencies:
-        patterns:
-          - "*"
-        update-types:
-          - "patch"
-          - "major"
-
-  # Config for Docker dependencies in docker-compose
-  - package-ecosystem: "docker"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    groups:
-      docker-images:
-        patterns:
-          - "*"
-        update-types:
-          - "patch"
-          - "minor"
-          - "major"
+    # Config for backend-dependencies
+    -   package-ecosystem: "gradle"
+        directory: "/"
+        schedule:
+            interval: "monthly"
+        groups:
+            backend-dependencies:
+                patterns:
+                    - "*"
+                update-types:
+                    - "patch"
+                    - "major"
