refactor: modify dependabot scope & assign to me

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,4 +12,7 @@ updates:
                     - "*"
                 update-types:
                     - "patch"
+                    - "minor"
                     - "major"
+        assignees:
+            - emaarco
