refactor: modify assignee & reviewer for dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,5 +14,5 @@ updates:
                     - "patch"
                     - "minor"
                     - "major"
-        assignees:
+        reviewers:
             - emaarco
